Ajout des liens du plugin d'event

--- a/parts/header.html
+++ b/parts/header.html
@@ -5,6 +5,10 @@
 <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
 <div class="wp-block-group"><!-- wp:navigation {"ref":4} /-->
 
+<!-- wp:shortcode -->
+[crops_events_profile_link]
+<!-- /wp:shortcode -->
+
 <!-- wp:loginout /--></div>
 <!-- /wp:group --></div>
 <!-- /wp:group --></div>
